<resources>
    <string name="app_name">Critical Access</string>

    <!-- Buttons -->
    <string name="btn_register">REGISTER</string>
    <string name="btn_unregister">UNREGISTER</string>
    <string name="btn_call">CALL</string>
    <string name="btn_accept">ACCEPT</string>
    <string name="btn_hangup">HANG UP</string>
    <string name="btn_token">TOKEN</string>
    <string name="btn_speaker_off">Speaker OFF</string>
    <string name="btn_speaker_on">Speaker ON</string>
    <string name="btn_er">Emergency</string>
    <string name="switch_private">Private Call</string>
    <string name="switch_group">Group Call</string>
    <string name="text_status">Status: </string>
    <string name="text_eMBMS">eMBMS: </string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Emergency">EMERGENCY</string>

    <!-- Messages -->
    <string name="text_talking">Talking: </string>
    <string name="Error_in_authetication">Authetication error</string>
    <string name="option_SDK">Select SDK</string>
    <string name="option_eMBMS">Select eMBMS MW</string>
    <string name="option_registration">Select IdMS/CMS</string>
    <string name="option_auto_reg">Auto-Registration</string>
    <string name="option_about">About</string>
    <string name="option_exit">Exit</string>

    <!-- Menus -->
    <string name="reg_idms">IdMS</string>
    <string name="reg_cms">CMS</string>

    <!-- About -->
    <string name="Build_version">Build version</string>
    <string name="Developed_by">Developed by</string>
    <string name="web">\nwww.mcopenplatform.org</string>
    <string name="copyright">\u00a9 2019 All rights reserved</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_home_page">Title</string>
    <string name="tab_1">Groups</string>
    <string name="tab_2">Contacts</string>

    <!-- Map -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="unregister">unregister</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="authentication_setting">Authentication Setting</string>
    <string name="registration_setting">Registration Setting</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

</resources>
