<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.test.client.mcopclient.view.MainActivity">

    <item
        android:id="@+id/action_registration"
        android:orderInCategory="300"
        android:title="@string/option_registration"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_auto_reg"
        android:orderInCategory="400"
        android:title="@string/option_auto_reg"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="500"
        android:title="@string/option_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="600"
        android:title="@string/option_exit"
        app:showAsAction="never" />
</menu>