<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingsActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="16sp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_margin="16sp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/imgage_photo"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:src="@drawable/group_photo"
                    android:maxHeight="64sp"
                    android:maxWidth="64sp"
                    android:gravity="center_horizontal"
                    android:layout_margin="16sp" />
                <TextView
                    android:id="@+id/tv_display_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="32sp"
                    android:text="Display Name" />
                <TextView
                    android:id="@+id/tv_mcptt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16sp"
                    android:text="MCPTT ID" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_margin="16sp">
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:onClick="btnLoginOnClick"
                    android:layout_margin="16sp"
                    android:backgroundTint="@color/colorAccent"
                    />
                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:onClick="btnLogoutOnClick"
                    android:layout_margin="16sp"
                    android:backgroundTint="@color/unregistered"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16sp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/authentication_setting"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <RadioGroup
                    android:id="@+id/rg_authentication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16sp">
                    <RadioButton
                        android:id="@+id/rb_idms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="IdMS/CMS"
                        android:onClick="rbIdMSClick"/>
                    <RadioButton
                        android:id="@+id/rb_no_auth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No Authentication"
                        android:onClick="rbNoAuthOnClick"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16sp"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_setting"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <RadioGroup
                    android:id="@+id/rg_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16sp">
                    <RadioButton
                        android:id="@+id/rb_auto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Auto"
                        android:onClick="rbAutoOnClick"/>
                    <RadioButton
                        android:id="@+id/rb_manual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Manual"
                        android:onClick="rbManualOnClick"/>
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>